--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,19 @@
 .page__content p {
     font-size: 0.7em;
 }
+
+
+.archive__item-title {
+    margin-bottom: 0.25em;
+    font-family: -apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
+    line-height: initial;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 0.8em !important;
+}
+
+
+.archive__item-excerpt {
+    margin-top: 0;
+    font-size: .65em;
+}
