--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -62,3 +62,15 @@
     width: calc(100% - 300px);
     padding-right: 180px;
 }
+
+
+div.highlighter-rouge, figure.highlight {
+    position: relative;
+    margin-bottom: 1em;
+    background: #263238;
+    color: #eff;
+    font-family: Monaco,Consolas,"Lucida Console",monospace;
+    font-size: .7em;
+    line-height: 1.8;
+    border-radius: 4px;
+}
